--- a/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
+++ b/src/app/components/products/product-detail/product-detail-desktop/product-detail-desktop.component.html
@@ -56,7 +56,7 @@
                     </div>
                   </div>
 
-                  {{ solution.type }}: {{solution.description}}
+                  {{solution.description}}
                 </span>
               </div>
             </div>
