--- a/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
+++ b/src/app/components/products/product-detail/product-detail-mobile/product-detail-mobile.component.html
@@ -47,7 +47,7 @@
                     </div>
                   </div>
 
-                  {{ solution.type}}: {{solution.description}}
+                  {{solution.description}}
                 </span>
               </div>
             </mat-tab>
