--- a/src/app/pages/landing/landing.page.scss
+++ b/src/app/pages/landing/landing.page.scss
@@ -18,6 +18,11 @@ section#landing-page {
         visibility: hidden;
     }
 
+    #homepic3{
+        // height: 20vh;
+        max-height: 30vh;
+    }
+
 
     #home_pic_container {}
 
