--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -10,7 +10,8 @@
       <div class="image-text">
         <h2>Service</h2>
         <p>
-          When it comes to service, NEW CROWN your ideal partner. We bring our years of experience and expertise in RGB
+          When it comes to service, NEW CROWN is your ideal partner. We bring our years of experience and expertise in
+          RGB
           to the service of our customers. You can rely on us for:
         </p>
         <ul>
@@ -24,12 +25,10 @@
           <li>Training and hands-on training</li>
         </ul>
         <p>
-          Our service technicians will be on-site anywhere in the world, helping
-          you to get and keep your machines at level. Important to note our
-          technicians all speak English/Dutch/French. Line Audits, GOLD, SILVER,
-          BRONZE and below, we carry out line audits and advice on äny brand
-          lines old or new. Sometimes a neutral audit brings a fresh
-          perspective.
+          Our service technicians will be on-site anywhere in the world, helping you to get and keep your machines at
+          level. Important to note our technicians all speak English/Dutch/French. Line Audits, GOLD, SILVER, BRONZE and
+          below, we carry out line audits and advice on äny brand lines old or new. Sometimes a neutral audit brings a
+          fresh perspective.
         </p>
       </div>
     </div>
