--- a/src/app/components/products/product-list/product-list.page.html
+++ b/src/app/components/products/product-list/product-list.page.html
@@ -1,7 +1,9 @@
 <section id="product-list" class="page">
   <div class="products">
     <div class="header">
-      <h2>A SELECTION FROM OUR PORTFOLIO - PLEASE CLICK ON A PRODUCT CARD FOR MORE INFORMATION</h2>
+      <h2>A SELECTION OF OUR UPGRADES
+        <br /> click on a product card for more information
+      </h2>
       <div class="search">
         <div class="input">
           <i class="material-icons">search</i>
