--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -3,16 +3,30 @@
     <div class="content">
       <h1>Services</h1>
     </div>
+
+    <div>
+      <div class="service-banner-container">
+        <span id="service-banner-text">SERVICE HOTLINE</span>
+        <span id="service-banner-telephone">
+          <i class="material-icons">phone</i> +32 3 435 60 25</span
+        >
+        <span id="service-banner-email">
+          <i class="material-icons">mail_outline</i>
+          service@newcrownservice.com</span
+        >
+      </div>
+    </div>
   </div>
 
   <div class="article">
     <div class="content">
       <div class="image-text">
         <h2>Service</h2>
+
         <p>
-          When it comes to service, NEW CROWN is your ideal partner. We bring our years of experience and expertise in
-          RGB
-          to the service of our customers. You can rely on us for:
+          When it comes to service, NEW CROWN is your ideal partner. We bring
+          our years of experience and expertise in RGB to the service of our
+          customers. You can rely on us for:
         </p>
         <ul>
           <li>Trouble shooting and root cause analysis</li>
@@ -25,10 +39,12 @@
           <li>Training and hands-on training</li>
         </ul>
         <p>
-          Our service technicians will be on-site anywhere in the world, helping you to get and keep your machines at
-          level. Important to note our technicians all speak English/Dutch/French. Line Audits, GOLD, SILVER, BRONZE and
-          below, we carry out line audits and advice on äny brand lines old or new. Sometimes a neutral audit brings a
-          fresh perspective.
+          Our service technicians will be on-site anywhere in the world, helping
+          you to get and keep your machines at level. Important to note our
+          technicians all speak English/Dutch/French. Line Audits, GOLD, SILVER,
+          BRONZE and below, we carry out line audits and advice on äny brand
+          lines old or new. Sometimes a neutral audit brings a fresh
+          perspective.
         </p>
       </div>
     </div>
@@ -39,11 +55,14 @@
       <div class="image-text">
         <h2>MAINTENANCE</h2>
         <p>
-          In order to keep a machine in good working order, it is not sufficient to make a revision once or twice a
-          year. Maintenance is a daily duty. During our interventions we always take the time to give your people a
-          thorough explanation about the maintenance required and explain to them what needs to be done and when. By
-          always doing this with your people hands-on, we do not only teach them what to do, but they also understand
-          why, and what the consequences of the lack of maintenance can be.
+          In order to keep a machine in good working order, it is not sufficient
+          to make a revision once or twice a year. Maintenance is a daily duty.
+          During our interventions we always take the time to give your people a
+          thorough explanation about the maintenance required and explain to
+          them what needs to be done and when. By always doing this with your
+          people hands-on, we do not only teach them what to do, but they also
+          understand why, and what the consequences of the lack of maintenance
+          can be.
         </p>
       </div>
     </div>
@@ -54,11 +73,14 @@
       <div class="image-text">
         <h2>SERVICE LEVEL AGREEMENTS</h2>
         <p>
-          We are happy to be your committed service partner. Joining up with NEW CROWN, you are not only sure of our
-          professional services, but we know the industry and have the flexibility when dates change or production
-          delays. After a period of exploration, we put together objectives that we constantly monitor using carefully
-          chosen KPIs. Service and material costs are then included in the agreement. So you can perfectly project your
-          costs in short and long term, for the machines you entrust to us.
+          We are happy to be your committed service partner. Joining up with NEW
+          CROWN, you are not only sure of our professional services, but we know
+          the industry and have the flexibility when dates change or production
+          delays. After a period of exploration, we put together objectives that
+          we constantly monitor using carefully chosen KPIs. Service and
+          material costs are then included in the agreement. So you can
+          perfectly project your costs in short and long term, for the machines
+          you entrust to us.
         </p>
       </div>
     </div>
@@ -69,9 +91,11 @@
       <div class="image-text">
         <h2>Fast and flexible</h2>
         <p>
-          Thanks to our light company structure and short lines of communication, we can come in very quickly. By
-          communicating intensively with our customers we can act very flexibly, and we always find an appropriate
-          solution for your planned and unplanned interventions.
+          Thanks to our light company structure and short lines of
+          communication, we can come in very quickly. By communicating
+          intensively with our customers we can act very flexibly, and we always
+          find an appropriate solution for your planned and unplanned
+          interventions.
         </p>
       </div>
     </div>
@@ -82,13 +106,16 @@
       <div class="image-text">
         <h2>LOCAL PARTNERS</h2>
         <p>
-          We are also always building on an international network of partners, so that we can quickly and efficiently
-          provide first-line service in difficult-to-reach areas, without the burdens that international travel entails,
-          such as the Obtaining a visa, or an expensive flight. Our local partners are also always involved in
-          interventions in their areas, with which we can not only reduce the costs for you, but therefore they enjoy
-          specific training for your needs, and can then also provide the appropriate service. In addition, in many
-          cases our local partners also offer the possibility to act in local currency, which is certainly an additional
-          asset.
+          We are also always building on an international network of partners,
+          so that we can quickly and efficiently provide first-line service in
+          difficult-to-reach areas, without the burdens that international
+          travel entails, such as the Obtaining a visa, or an expensive flight.
+          Our local partners are also always involved in interventions in their
+          areas, with which we can not only reduce the costs for you, but
+          therefore they enjoy specific training for your needs, and can then
+          also provide the appropriate service. In addition, in many cases our
+          local partners also offer the possibility to act in local currency,
+          which is certainly an additional asset.
         </p>
       </div>
     </div>
