changed email and footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -53,6 +53,14 @@
           </tr>
         </table>
       </div>
+
+      <div *ngIf="!isMobile">
+        <h2>Service hotline</h2>
+        <ul>
+          <li>+32 3 435 60 25</li>
+          <li>service@newcrownservice.com</li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="copyright" *ngIf="!isMobile">
