--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -6,7 +6,7 @@
 
     <div>
       <div class="service-banner-container">
-        <span id="service-banner-text">SERVICE HOTLINE</span>
+        <span id="service-banner-text"><strong>SERVICE HOTLINE</strong></span>
         <span id="service-banner-telephone">
           <i class="material-icons">phone</i> +32 3 435 60 25</span
         >
