--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -62,11 +62,12 @@
 
                 li {
                     margin-bottom: 3px;
+                    font-size: 16px;
+
 
                     a {
                         text-decoration: none;
                         color: black;
-                        font-size: 16px;
 
                         &:hover {
                             color: $main-color;
@@ -79,6 +80,7 @@
 
             div {
                 flex: 1;
+                padding: 0 5px;
                 display: flex;
                 flex-direction: column;
             }
