--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -25,7 +25,7 @@
         align-items: flex-start;
 
         @media (min-width: 768px) {
-            padding: 10px;
+            padding: 10px 0;
             justify-content: unset;
             flex-direction: row;
             align-items: center;
@@ -44,7 +44,7 @@
             @media (min-width: 768px) {
                 font-size: $font-size-large;
                 margin-left: 10%;
-                padding: 10px;
+                padding: 10px 0;
             }
         }
 
